--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter&family=Poppins&family=Roboto&display=swap");
 * {
   margin: 0;
   box-sizing: border-box;
 }
+
 header {
   width: 375px;
 }
+
 nav {
   background: #3c3a39;
   display: flex;
@@ -12,14 +15,16 @@ nav {
   align-items: center;
   padding: 20px;
 }
+
 #logo {
-  color: #ffffff;
+  color: #fff;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
 }
+
 #header {
   display: flex;
   flex-direction: column;
@@ -27,8 +32,9 @@ nav {
   height: 590px;
   padding: 120px 24px;
   background: #1c1a19;
-  color: #ffffff;
+  color: #fff;
 }
+
 #header h1 {
   font-family: "Crete Round";
   font-style: normal;
@@ -38,6 +44,7 @@ nav {
   color: #ff6b00;
   margin-bottom: 10px;
 }
+
 #header h5 {
   font-size: 24px;
   font-family: "Roboto";
@@ -45,6 +52,7 @@ nav {
   font-weight: 700;
   margin-bottom: 10px;
 }
+
 #header p {
   font-family: "Poppins";
   font-style: normal;
