--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ nav {
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
+  text-decoration: none;
 }
 
 #header {
@@ -61,6 +62,10 @@ nav {
   font-size: 16px;
   line-height: 24px;
   margin-bottom: 10px;
+}
+
+#header ul {
+  list-style: none;
 }
 
 #social-icons {
