fix contact-me section --> styling setup the right width and make margins

--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ nav {
   gap: 12px;
   padding: 12px;
 }
+
 .social-icons li {
   list-style: none;
 }
@@ -88,9 +89,7 @@ nav {
   display: grid;
   grid-template-columns: 24px auto 24px;
   grid-template-rows: 100px repeat(5, 1fr);
-
   row-gap: 20px;
-
   width: 375px;
   margin-top: 100px;
 }
@@ -98,10 +97,8 @@ nav {
 #myworks #title {
   grid-column: 2/3;
   grid-row: 1/2;
-
   width: 327px;
   height: 83px;
-
   font-family: "Crete Round", serif;
   font-size: 18px;
   text-align: center;
@@ -114,7 +111,6 @@ nav {
 #project1 {
   grid-column: 2/3;
   grid-row: 2/3;
-
   height: 568px;
 }
 
@@ -158,20 +154,17 @@ nav {
   text-align: center;
   letter-spacing: 0.03em;
   padding: 12px;
-  color: #ffffff;
+  color: #fff;
   border: none;
 }
 
 #project2 {
   grid-column: 2/3;
-  height: 568px;
-
   background-image: url("./images/Img\ Placeholder2.png");
   background-size: no-repeat;
-
   width: 327px;
   height: 386px;
-  color: #ffffff;
+  color: #fff;
 }
 #project2 h1 {
   font-family: "Crete Round", serif;
@@ -188,8 +181,7 @@ nav {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  padding: 0px 24px;
-
+  padding: 0 24px;
   margin-bottom: 20px;
 }
 #project2 button {
@@ -204,14 +196,14 @@ nav {
   text-align: center;
   letter-spacing: 0.03em;
   padding: 12px;
-  color: #ffffff;
+  color: #fff;
   border: none;
 }
 #project2 #skills {
   padding: 0px 24px;
 }
 #project2 li {
-  color: #ffffff;
+  color: #fff;
 }
 
 #about-me {
@@ -219,7 +211,6 @@ nav {
   flex-direction: column;
   background-color: #1c1a19;
   color: #f4f5f7;
-  /* align-items: center; */
 }
 
 #about-me #title {
@@ -227,18 +218,14 @@ nav {
   font-family: "Crete Round", sans-serif;
   font-weight: 400;
   font-size: 68px;
-
   letter-spacing: 0.37px;
-
   color: #ff6b00;
-
   margin-top: 120px;
 }
 
 #about-me p {
   font-family: "Inter", sans-serif;
   font-size: 18px;
-
   color: #f4f5f7;
   line-height: 24px;
   text-align: left;
@@ -248,22 +235,17 @@ nav {
 #about-me #download {
   font-family: "Inter", sans-serif;
   font-size: 18px;
-
   width: 161px;
   height: 48px;
-
   text-align: center;
   background: #ff6b00;
   color: #f4f5f7;
-
   border: none;
   margin-left: 30px;
 }
 
 /* #about-me img {
   position: absolute;
-  left: 60px;
-  top: 60px;
 } */
 
 #about-me hr {
@@ -276,8 +258,8 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: center;
-
   font-family: "Inter", serif;
+  margin-bottom: 100px;
 }
 
 #details .skill {
@@ -289,9 +271,6 @@ nav {
   gap: 24px;
   font-size: 32px;
 }
-/* .skill h1 {
-  display: flex;
-} */
 
 .skill li {
   list-style: none;
@@ -307,8 +286,6 @@ nav {
   gap: 20px;
   justify-content: center;
   align-items: center;
-
-  width: 327px;
   padding: 20px;
   margin-top: 50px;
 }
@@ -318,20 +295,16 @@ nav {
   font-family: "Inter", sans-serif;
   font-size: 30px;
   line-height: 44px;
-
   text-align: center;
   color: #172b4d;
-  margin-left: 40px;
   margin-bottom: 100px;
 }
 
 #contact-me form {
   display: flex;
   flex-direction: column;
-  /* align-content: center; */
   align-items: center;
   width: 122px;
-  margin-left: 50px;
 }
 
 #contact-me input {
@@ -349,7 +322,7 @@ nav {
   border: none;
   font-size: 22px;
   background-color: #fbf8f7;
-  color: #000;
+  color: #3c3a39;
   padding: 20px;
   margin-bottom: 20px;
 }
@@ -367,11 +340,17 @@ nav {
   text-align: center;
   letter-spacing: 0.03em;
   padding: 12px;
-  color: #ffffff;
+  color: #fff;
   border: none;
 }
+
 #contact-me hr {
-  width: 375px;
   height: 0;
-  /* margin: 50px 0 50px 24px; */
+  width: 375px;
+  background-color: #dfe1e6;
+  margin-top: 100px;
+}
+
+#contact-me ul {
+  padding: 30px;
 }
