--- a/style.css
+++ b/style.css
@@ -403,7 +403,7 @@ nav #menu-icon {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #262626;
+  background-color: #1c1a19;
   color: #f4f5f7;
   position: relative;
 }
@@ -424,7 +424,8 @@ nav #menu-icon {
   font-weight: 400;
   font-size: 60px;
   letter-spacing: 0.37px;
-  color: #f55800;
+  color: #ff6b00;
+  text-align: center;
 }
 
 #about-header p {
@@ -447,6 +448,9 @@ nav #menu-icon {
 }
 
 .illusWrap {
+  /* background-image: url("./images/illustration-about-me-mobile.png");
+  background-repeat: no-repeat;
+  background-size: cover; */
   width: 50%;
   height: 300px;
   position: absolute;
@@ -460,9 +464,22 @@ nav #menu-icon {
 }
 
 @media (min-width: 768px) {
+  #about-me {
+    background-color: #262626;
+  }
+
   #about-header {
     display: flex;
     margin-bottom: 150px;
+  }
+
+  #about-header h4 {
+    color: #f55800;
+    text-align: left;
+  }
+
+  #about-header button {
+    background-color: #f55800;
   }
 
   #about-header .details {
@@ -493,7 +510,7 @@ nav #menu-icon {
 #about-me hr {
   width: 327px;
   height: 0;
-  margin-top: 200px;
+  margin-top: 150px;
 }
 
 @media (min-width: 768px) {
@@ -565,5 +582,100 @@ nav #menu-icon {
 
   .heading1::before {
     left: -25px;
+  }
+}
+
+/* //////////////////////////contact me/////////////////////////////// */
+
+#contact-me .container {
+  margin: 50px auto;
+}
+
+#contact-me h3 {
+  font-size: 30px;
+  line-height: 44px;
+  color: #172b4d;
+  margin-bottom: 100px;
+  height: 256px;
+  text-align: center;
+  font-family: "Inter", sans-serif;
+}
+
+#contact-me form {
+  font-family: "Inter", sans-serif;
+}
+
+#contact-me #name,
+#contact-me #email {
+  /* width: 50%; */
+  height: 48px;
+  border: none;
+  border-bottom: 1px solid #dbd8d7;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  margin-bottom: 20px;
+  padding: 20px;
+  width: 100%;
+}
+
+#contact-me textarea {
+  width: 100%;
+  border: none;
+  font-family: "Inter", sans-serif;
+  font-size: 22px;
+  background-color: #fbf8f7;
+  color: #3c3a39;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+#contact-me button {
+  /* width: 131px; */
+  height: 48px;
+  background-color: #ff6b00;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 24px;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.03em;
+  padding: 12px;
+  color: #fff;
+  border: none;
+}
+
+footer .social-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  margin: 30px 0;
+}
+
+@media (min-width: 768px) {
+  #contact-me .container {
+    display: flex;
+    gap: 20px;
+  }
+
+  #contact-me h3 {
+    width: 40%;
+    color: #262626;
+    text-align: left;
+  }
+
+  #contact-me form {
+    width: 100%;
+  }
+
+  #contact-me #name,
+  #contact-me #email {
+    width: 49%;
+    padding: 30px;
+  }
+
+  #contact-me #message {
+    width: 100%;
   }
 }
