--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ button:hover {
   background-color: #fff5e1 !important;
   color: #f55800 !important;
   border: 1px solid #f55800 !important;
+  cursor: pointer;
 }
 
 button:disabled {
@@ -206,6 +207,7 @@ nav a:hover {
 }
 
 .header h1 {
+  /* width: 18; */
   font-family: "Crete Round", serif;
   font-style: normal;
   font-weight: 400;
@@ -213,17 +215,11 @@ nav a:hover {
   line-height: 64px;
   color: #ff6b00;
   margin-bottom: 10px;
-  animation: typing 2s steps(22), blink 0.5s step-end infinite alternate;
+
+  /* animation: typing 2s steps(22), blink 0.5s step-end infinite alternate;
   white-space: nowrap;
   overflow: hidden;
-  border-right: 3px solid;
-  width: 18ch;
-}
-
-@media (min-width: 768px) {
-  .header h1 {
-    color: #e05304;
-  }
+  border-right: 3px solid; */
 }
 
 .header h5 {
@@ -739,6 +735,152 @@ footer .social-icons {
     width: 100%;
   }
 }
+
+/* pop modal */
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 50px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto;
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 90%;
+  height: 96%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-content .head {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modal-content h4 {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 44px;
+  color: #172b4d;
+}
+
+.modal-content .skills {
+  display: flex;
+  margin: 20px 0;
+}
+
+.modal-content .skills li {
+  font-size: 16px;
+  line-height: 20px;
+  padding: 8px 10px;
+  border: 1px solid #8993a4;
+}
+
+.imgWrapper img {
+  max-width: 100%;
+}
+
+.modal-content p {
+  width: 100%;
+  height: auto;
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #344563;
+  margin: 20px 0;
+}
+
+.btnWrapper {
+  max-width: 300px;
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  padding: 0;
+}
+
+.p-button {
+  height: 48px;
+  background-color: #ff6b00;
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 24px;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #fff;
+  border: none;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+.p-button img {
+  padding-left: 10px;
+  max-width: 100%;
+}
+
+@media (min-width: 768px) {
+  .modal-content {
+    height: 80%;
+  }
+
+  .modal-content h4 {
+    content: "Keeping track of hundreds  of components website";
+  }
+
+  .content-wrapper {
+    display: flex;
+    gap: 20px;
+  }
+
+  .content-wrapper .details {
+    width: 40%;
+  }
+
+  .content-wrapper .details p {
+    line-height: 30px;
+    margin: 0;
+    margin-bottom: 80px;
+  }
+}
+
+/* end pop modal */
+
+/* //////animation */
 
 @keyframes rotateLogo {
   0% {
