--- a/style.css
+++ b/style.css
@@ -660,6 +660,19 @@ nav a:hover {
   font-family: "Inter", sans-serif;
 }
 
+#contact-me .field {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  padding: 10px;
+}
+
+#contact-me small {
+  padding-left: 20px;
+  color: red;
+}
+
 #contact-me #fname,
 #contact-me #lname,
 #contact-me #email {
@@ -668,7 +681,6 @@ nav a:hover {
   border-bottom: 1px solid #dbd8d7;
   font-family: "Inter", sans-serif;
   font-size: 16px;
-  margin-bottom: 20px;
   padding: 20px;
   width: 100%;
 }
@@ -699,14 +711,6 @@ nav a:hover {
   border: none;
 }
 
-footer .social-icons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 12px;
-  margin: 30px 0;
-}
-
 @media (min-width: 768px) {
   #contact-me .container {
     display: flex;
@@ -723,16 +727,18 @@ footer .social-icons {
     width: 100%;
   }
 
-  #contact-me #fname,
-  #contact-me #lname {
-    width: 49%;
-    padding: 30px;
+  .field50 {
+    width: 50% !important;
+    float: left;
   }
+}
 
-  #contact-me #message,
-  #contact-me #email {
-    width: 100%;
-  }
+footer .social-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  margin: 30px 0;
 }
 
 /* pop modal */
@@ -878,6 +884,10 @@ footer .social-icons {
 }
 
 /* end pop modal */
+
+.error {
+  border: 0.5px solid red !important;
+}
 
 /* //////animation */
 
